# gh-workflow-auditor

./: .gitignore  README.md  poetry.toml  pyproject.toml
ghwfauditor/: __main__.py  action_auditor.py  console.py  gh_wrapper.py  query_data.py  workflow.py
